--- a/angular-client/templates/app.html
+++ b/angular-client/templates/app.html
@@ -2,10 +2,12 @@
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
     <nav class="navbar-inverse navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
+        
         <div class="navbar-header">
           <a class="navbar-brand font-weight-bold" href="#" style="background-color:  #275E64; font-weight: bold;">ProjectO</a>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#" >Home</a></li>
+          <li class="active"><a href="#!/project" >projects</a></li>
         </ul>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -84,7 +86,6 @@
       </a>
     </div>
 
-
     <!-- Container (The Band Section) -->
     <div id="band" class="container text-center">
       <h1>YOU'RE IN GOOD WORK PLACE</h1>
@@ -93,39 +94,34 @@
       <br>
       <div class="row">
         <div class="col-xs-3">
-          <p class="text-center"><strong>Qays</strong></p><br>
+          <p class="text-center"><strong>Lena</strong></p><br>
           <a href="#demo" data-toggle="collapse">
-            <img src="images/qays.jpg" class="img-circle person" alt="Qays" width="255" height="255">
+            <img src="images/lena.jpg" class="img-circle person" alt="Qays" width="255" height="255">
           </a>
-          <div id="demo" class="collapse">
-            <p> hey this is me :D </p>
-            <p> hey this is me :D </p>
-            <p> hey this is me :D </p>
-            <p> hey this is me :D </p>
-          </div>
+         
         </div>
         <div class="col-sm-3">
-          <p class="text-center"><strong>Abdulhameed</strong></p><br>
+          <p class="text-center"><strong>Waed</strong></p><br>
           <a href="#demo2" data-toggle="collapse">
-            <img src="images/abdel.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+            <img src="images/waed.jpeg" class="img-circle person" alt="Random Name" width="255" height="255">
           </a>
           <div id="demo2" class="collapse">
            <p> </p>
          </div>
        </div>
        <div class="col-sm-3">
-        <p class="text-center"><strong>Abdulatif</strong></p><br>
+        <p class="text-center"><strong>Hanan</strong></p><br>
         <a href="#demo3" data-toggle="collapse">
-          <img src="images/abdelu.JPG" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="images/hannan.jpg " class="img-circle person" alt="Random Name" width="255" height="255">
         </a>
         <div id="demo3" class="collapse">
          <p> </p>
        </div>
      </div>
      <div class="col-sm-3">
-      <p class="text-center"><strong>Shatha</strong></p><br>
+      <p class="text-center"><strong>Yusser</strong></p><br>
       <a href="#demo4" data-toggle="collapse">
-        <!-- <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255"> -->
+        <img src="images/yusser.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo4" class="collapse">
         <p> </p>
